# shortbot

./: .gitignore  .licensesnip  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Containerfile  Dockerfile  LICENSE  README.md
.githooks/: pre-commit  pre-push
.github/workflows/: pkg_push.yml  rust.yml
.sqlx/: query-18da0f6e53ef1a613d832639678da661a3e4ecad67286726a397d29828281ea2.json  query-2b48855e757d5e6d33300733ec728d611367665b3eb33b6b1e9e829f55f911a0.json  query-347eb9141dcaf47add50a021a651fb0bb5102e7862c811038898183c11da8c34.json  query-6b5f9cd1c4d6afb6918c95872f0339c319b6a59ca6fbf13062380f70120c1479.json  query-752e38a9b2d195ac1a4269ad25b52c43962bd090301d7a10d29207726ba1814b.json  query-7f25605b8a54b28f77e99f36bb0c3b67b235760acd40f47f73f9465619d5581c.json  query-9f036d89adead88f4128ea9138f88d1daf0445f2597ed2d47022fe363ffc5c5b.json  query-b025348c336cb887e6ae35ed52361b4a69793defe7c68927910a051416e81d1c.json  query-bea354e618a345993fa6662ba28e85dc61d1f90b87594dd050f2ad7647ec82c2.json  query-c559ad1b4787baf7bdc2a144829866724660445050f2c2ef429bbe124966a179.json  query-d479671a6fdb677d1376f3cbdca7383782bf014d14ad712259f5b86d1360f96c.json  query-d5c5df166d4e9e7efffadecc1f13acc66507319ebffa8146693e950709408e92.json  query-dacbef7e126654d807a9fc51264985e0f4af56361efef77c5c5e6067da1c5970.json  query-de149edc2c219fffe6a74134a023e263aa7443d5cbafafd640a991d6f96eb5d2.json
bot-core/: .env  Cargo.toml
bot-core/.sqlx/: query-04d85a1382b43b7bb423032d47f0b02e71aa3f4d7c233782a64ff6dfada50308.json  query-0cea2dfa17ebde2b0a22417bdf37ef6b4402725a143934abfde0048bacefc397.json  query-3749985ebb6447679a574746dd093d89e5931cb10addcb7838cc77274568ff67.json  query-769a751059a31050756010ef3459f7a429aed9f3f072dd9f94af1314e482a4d6.json  query-a9a6013017d5eea188dbce2425cd108028dcf28dad5c7a7fb4f6c88744671cb5.json
bot-core/data/templates/: chose_es.txt  help_en.txt  help_es.txt  short_position_en.txt  short_position_es.txt  support_en.txt  warning_en.txt  warning_es.txt  welcome_en.txt  welcome_es.txt
bot-core/src/: configuration.rs  lib.rs  main.rs  shortcache.rs  telemetry.rs
bot-core/src/endpoints/: default.rs  help.rs
bot-core/src/handlers/: schema.rs
bot-core/src/users/: subscriptions.rs
clientlib/: .env  Cargo.toml
clientlib/.sqlx/: query-179ef1ae24667a7958c0599ca1d99404dedd47adad61346725393969d692d8ec.json  query-41e261dfa4c63359a522a5759dee843b8d14b317f3ce225f688f25f5076db1a9.json  query-6b5f9cd1c4d6afb6918c95872f0339c319b6a59ca6fbf13062380f70120c1479.json  query-9adbc73b0b33b88725174a96de8db3a91ede2daaef130b1f754a0711519d3b97.json  query-f3efbf8669878cb720edcf7400aa78911e561e7a5ca6f54c0d1659e6ba2def52.json
clientlib/migrations/: 20250331132621_initial_db_schema.sql
clientlib/src/: client_handler.rs  configuration.rs  lib.rs  subscriptions.rs
clientlib/src/cache/: cache.rs  cache_handler.rs
clientlib/src/client/: client_handler.rs  client_meta.rs  subscriptions.rs
clientlib/tests/db_backend/: cache_handler.rs  clientlib.rs  helpers.rs  main.rs
config/: base.toml
configuration/: Cargo.toml
configuration/src/: lib.rs
data/: ibex35.toml
data/templates/: chose_en.txt  chose_es.txt  help_en.txt  help_es.txt  help_subscriptions_en.txt  help_subscriptions_es.txt  short_position_brief.txt  short_position_en.txt  short_position_es.txt  support_es.txt  warning_en.txt  warning_es.txt  welcome_en.txt  welcome_es.txt
migrations/: 20240621140854_create_initial_schema.sql  20240724102338_update_alive_position_trigger.sql
script/: init_valkey.bash
scripts/: init_db.bash
src/: configuration.rs  errors.rs  keyboards.rs  lib.rs  main.rs  metrics.rs  shortcache.rs  telemetry.rs  webserver.rs
src/endpoints/: default.rs  help.rs  helper.rs  liststocks.rs  plans.rs  receivestock.rs  settings.rs  start.rs  subscriptions.rs  support.rs  webhook.rs
src/finance/: cnmv_scrapper.rs  ibex35.rs  ibex_company.rs
src/handlers/: schema.rs  updates_handler.rs
src/users/: subscriptions.rs  user_config.rs  user_handler.rs  user_meta.rs
