[workspace]
resolver = "2"
members = ["bot-core", "clientlib"]

[workspace.package]
edition = "2024"
version = "0.3.0"
license = "APACHE"
authors = ["Felipe Torres González <torresfelipex1@gmail.com>"]
homepage = "https://felipe.nubecita.eu/projects/shortbot/"
repository = "https://github.com/felipet/shortbot"

[workspace.lints.rust]
unsafe_code = "forbid"
