[package]
name = "shortbot"
edition = "2024"
version = "0.7.0"
authors = ["Felipe Torres González"]
description = "A Telegram bot for checking short positions against shares listed in the Ibex35"

[dependencies]
config = { version = "0.15.6", features = ["yaml"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.217", features = ["serde_derive"] }
teloxide = { version = "0.17.0", features = ["macros", "ctrlc_handler", "webhooks-axum", "throttle"] }
tokio = {version = "1.8", features = ["rt-multi-thread", "macros", "sync"]}
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.3.0"
pretty_assertions = "1.4.1"
toml = "0.8.19"
scraper = "0.22.0"
reqwest = { version = "0.12.12", features = ["json"] }
thiserror = "2.0.11"
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "postgres", "macros", "uuid" ] }
finance_ibex = "0.1.0-beta1"
finance_api = "0.1.0"
data_harvest = "0.2.1"
uuid = { version = "1.13.1", features = ["v4"] }
chrono = { version = "0.4.38", features = ["alloc", "std", "clock", "serde"] }
axum = "0.8.0"
serde_derive = "1.0.219"
redis-macros = "0.5.5"
redis = { version = "0.32.2", features = ["tokio-comp"] }
serde_json = "1.0.140"
rand = "0.9.1"

[dev-dependencies]
once_cell = "1.21.3"
rstest = "0.25.0"
pretty_assertions = "1.4.1"
